<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/android"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textAndroid"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/bbb"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/black" />

    <TextView
        android:id="@+id/textPost1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAndroid"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/imageView14"
        android:text="@string/_125"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPost1"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/imageView14"
        android:text="@string/post"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPost3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAndroid"
        android:layout_alignStart="@id/textPost1"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/_20k"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPost4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPost3"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/textPost2"
        android:text="@string/followers"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPost5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAndroid"
        android:layout_alignStart="@id/textPost3"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:text="@string/_22"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPost6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPost5"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@id/textPost4"
        android:text="@string/following"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView14"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView14"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/address"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView15"
        android:layout_marginStart="25dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView16"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/bbb"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView16"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageView15"
        android:background="@color/bbb"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView16"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageView16"
        android:background="@color/bbb"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView16"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageView17"
        android:background="@color/bbb"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView16"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/imageView18"
        android:background="@color/bbb"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/textView16"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/imageView19"
        android:background="@color/bbb"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/black" />


    <TextView
        android:id="@id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView20"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/direction"
        app:drawableTopCompat="@drawable/ic_baseline_directions_24" />


    <TextView
        android:id="@id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView20"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/textView22"
        android:text="@string/call"
        app:drawableTopCompat="@drawable/ic_baseline_call_24" />


    <TextView
        android:id="@id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView20"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/textView"
        android:text="@string/save"
        app:drawableTopCompat="@drawable/ic_baseline_grade_24" />


    <TextView
        android:id="@id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView20"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/textView3"
        android:text="@string/website"
        app:drawableTopCompat="@drawable/ic_baseline_insert_link_24" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:background="@color/bbb"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView4"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/imageView30"
        android:background="@color/bbb"
        app:srcCompat="@drawable/black" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_below="@id/textView4"
        android:layout_toEndOf="@id/imageView31"
        android:layout_marginTop="50dp"
        android:background="@color/bbb"
        app:srcCompat="@drawable/black" />


</RelativeLayout>